# rgit-rs

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: add.rs  commit.rs  init.rs  mod.rs
src/constant/: mod.rs
src/error/: mod.rs
src/file/: mod.rs
src/index/: mod.rs
src/model/: mod.rs
src/tree/: mod.rs
src/utils/: mod.rs
