[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "cargo"] }
thiserror = "1"
ring = "0.16.20"
data-encoding = "2.3.2"
flate2 = "1.0.24"
time = {version = "0.3.14", features = ["formatting"]}
